Add BPF-style pre-filtering in Rust layer
Implement high-performance packet filtering at the Rust layer, applied
before packet deserialization to Elixir terms. Provides 7-52x speedup
for selective filtering on large PCAP/PCAPNG files.

Features:
- IP address filtering (exact match and CIDR ranges)
- Port filtering (exact match and ranges)
- Protocol filtering (TCP, UDP, ICMP, IPv4, IPv6)
- Packet size filtering (min/max/range)
- Timestamp filtering (Unix seconds)
- Logical operators (AND, OR, NOT)
- Clean Elixir API via PcapFileEx.PreFilter module

Implementation:
- New Rust filter module using etherparse for packet parsing
- Filtering integrated into packet reading loop
- NIFs: set_filter/2 and clear_filter/1 for both PCAP and PCAPNG
- Comprehensive test coverage (28 tests)
- Updated benchmarks with pre vs post filtering comparison

Bug Fixes:
- Fixed Stream.from_reader/1 to support PcapNg readers
- Added 8 tests for stream operations with both formats

Documentation:
- Feature specification (docs/pre_filtering_feature_spec.md)
- Benchmark guide (docs/benchmarks.md)
- Troubleshooting guide (docs/TROUBLESHOOTING.md)
- Comparison report (docs/epcap_comparison.md)
- Updated README and User Guide with pre-filtering examples

Dependencies:
- etherparse 0.15: Fast packet parsing
- ipnetwork 0.20: CIDR network matching

--- a/native/pcap_file_ex/Cargo.toml
+++ b/native/pcap_file_ex/Cargo.toml
@@ -11,3 +11,5 @@ crate-type = ["cdylib"]
 rustler = "0.37.0"
 pcap-file = { git = "https://github.com/courvoif/pcap-file" }
 thiserror = "1.0"
+etherparse = "0.15"
+ipnetwork = "0.20"
