--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 pcap_file_ex-*.tar
 
+# Rust build artifacts
+native/pcap_file_ex/target/
+
+# Compiled native libraries
+priv/
+
+# Generated test fixtures
+test/fixtures/*.pcap
+test/fixtures/*.pcapng
+test/fixtures/*.log
+
+# Issue tracking database (beads)
+.beads/
+
+# AI assistant configuration
+.claude/
+
+# AI planning documents (ephemeral)
+history/
