--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,23 +14,23 @@ jobs:
       matrix:
         job:
           # Linux targets
-          - { target: x86_64-unknown-linux-gnu, os: ubuntu-20.04 }
-          - { target: aarch64-unknown-linux-gnu, os: ubuntu-20.04, use-cross: true }
+          - { target: x86_64-unknown-linux-gnu, os: ubuntu-latest }
+          - { target: aarch64-unknown-linux-gnu, os: ubuntu-latest, use-cross: true }
 
           # macOS targets
-          - { target: x86_64-apple-darwin, os: macos-11 }
-          - { target: aarch64-apple-darwin, os: macos-11 }
+          - { target: x86_64-apple-darwin, os: macos-13 }
+          - { target: aarch64-apple-darwin, os: macos-14 }
 
           # Windows targets
-          - { target: x86_64-pc-windows-msvc, os: windows-2019 }
-          - { target: x86_64-pc-windows-gnu, os: windows-2019 }
+          - { target: x86_64-pc-windows-msvc, os: windows-latest }
+          - { target: x86_64-pc-windows-gnu, os: windows-latest }
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@1.91.0
         with:
           targets: ${{ matrix.job.target }}
 
@@ -41,8 +41,9 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.19'
-          otp-version: '27'
+          elixir-version: '1.19.2'
+          otp-version: '28.1.1'
+          version-type: strict
 
       - name: Install dependencies
         run: mix deps.get
@@ -83,7 +84,7 @@ jobs:
         shell: bash
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: nif-${{ matrix.job.target }}
           path: native/pcap_file_ex/target/artifacts/
@@ -91,13 +92,13 @@ jobs:
   create_release:
     name: Create GitHub Release
     needs: build_release
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
 
@@ -117,16 +118,17 @@ jobs:
   publish_checksums:
     name: Generate and upload checksums
     needs: create_release
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.19'
-          otp-version: '27'
+          elixir-version: '1.19.2'
+          otp-version: '28.1.1'
+          version-type: strict
 
       - name: Install dependencies
         run: mix deps.get
