--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ test/fixtures/*.pcap
 test/fixtures/*.pcapng
 test/fixtures/*.log
 
+# ignore checksums
+checksum-*.exs
+
 # Issue tracking database (beads)
 .beads/
 
