--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,85 +2,80 @@ name: Build Precompiled NIFs
 
 on:
   push:
+    branches:
+      - master
+    paths:
+      # Just run on main branch if "native" path changed.
+      - "native/**"
+      # Also run if this file changes.
+      - ".github/workflows/release.yml"
     tags:
-      - "v*"
+      # Tags will always run.
+      - "*"
+  pull_request:
+    paths:
+      # In PRs we only run if this file changes.
+      - ".github/workflows/release.yml"
+  workflow_dispatch:
 
-permissions:
-  contents: write
-  id-token: write
-  attestations: write
+name: Precomp NIFs
 
 jobs:
   build_release:
-    name: Build NIF for ${{ matrix.job.target }} (${{ matrix.job.os }})
+    name: NIF ${{ matrix.nif }} - ${{ matrix.job.target }} (${{ matrix.job.os }} | ${{ matrix.job.variant || 'default' }})
     runs-on: ${{ matrix.job.os }}
+
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
+
     strategy:
       fail-fast: false
       matrix:
+        nif: ["2.15"]
         job:
-          # Linux targets - using Ubuntu 22.04 for glibc 2.35 compatibility
-          - { target: x86_64-unknown-linux-gnu, os: ubuntu-22.04 }
+          - { target: aarch64-apple-darwin, os: macos-13 }
           - { target: aarch64-unknown-linux-gnu, os: ubuntu-22.04, use-cross: true }
-
-          # macOS targets
+          - { target: aarch64-unknown-linux-musl, os: ubuntu-22.04, use-cross: true }
           - { target: x86_64-apple-darwin, os: macos-13 }
-          - { target: aarch64-apple-darwin, os: macos-14 }
-
-          # Windows targets
-          - { target: x86_64-pc-windows-msvc, os: windows-2022 }
-          - { target: x86_64-pc-windows-gnu, os: windows-2022 }
+          - { target: x86_64-pc-windows-gnu, os: windows-2025, rustflags: "-C target-feature=+fxsr,+sse,+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+popcnt,+avx,+fma" }
+          - { target: x86_64-pc-windows-gnu, os: windows-2025, variant: "legacy_cpu" }
+          - { target: x86_64-pc-windows-msvc, os: windows-2025, rustflags: "-C target-feature=+fxsr,+sse,+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+popcnt,+avx,+fma" }
+          - { target: x86_64-pc-windows-msvc, os: windows-2025, variant: "legacy_cpu" }
+          - { target: x86_64-unknown-freebsd, os: ubuntu-22.04, use-cross: true, rustflags: "-C target-feature=+fxsr,+sse,+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+popcnt,+avx,+fma" }
+          - { target: x86_64-unknown-freebsd, os: ubuntu-22.04, use-cross: true, variant: "legacy_cpu" }
+          - { target: x86_64-unknown-linux-gnu, os: ubuntu-22.04, rustflags: "-C target-feature=+fxsr,+sse,+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+popcnt,+avx,+fma" }
+          - { target: x86_64-unknown-linux-gnu, os: ubuntu-22.04, variant: "legacy_cpu" }
+          - { target: x86_64-unknown-linux-musl, os: ubuntu-22.04, use-cross: true }
 
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@1.91.0
-        with:
-          targets: ${{ matrix.job.target }}
-
-      - name: Cache Rust dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: v0-precomp
-          shared-key: ${{ matrix.job.target }}-2.15
-          workspaces: native/pcap_file_ex
-
-      - name: Set up Elixir
-        uses: erlef/setup-beam@v1
-        with:
-          elixir-version: '1.19.2'
-          otp-version: '28.1.1'
-          version-type: strict
-
-      - name: Install dependencies
-        run: mix deps.get
-
-      - name: Extract project version
-        id: version
+      - name: Extract crate information
         shell: bash
         run: |
-          # Extract version from mix.exs @version module attribute
-          VERSION=$(grep '@version' mix.exs | head -1 | sed -n 's/.*@version "\(.*\)".*/\1/p')
+          # Get the project version from mix.exs
+          echo "PROJECT_VERSION=$(sed -n 's/^  @version "\(.*\)"/\1/p' mix.exs | head -n1)" >> $GITHUB_ENV
 
-          # Validate version was extracted
-          if [ -z "$VERSION" ]; then
-            echo "Error: Failed to extract version from mix.exs"
-            exit 1
-          fi
+      - name: Maybe add Rust flags for compilation
+        shell: bash
+        run: |
+          echo "RUSTFLAGS=${{ matrix.job.rustflags }}" >> $GITHUB_ENV
+        if: ${{ matrix.job.rustflags }}
 
-          echo "Extracted version: $VERSION"
+      - name: Add target
+        shell: bash
+        run: |
+          rustup target add ${{ matrix.job.target }}
 
-          # Validate tag matches version
-          TAG=${GITHUB_REF#refs/tags/}
-          EXPECTED_TAG="v${VERSION}"
-          if [ "$TAG" != "$EXPECTED_TAG" ]; then
-            echo "Warning: Git tag ($TAG) doesn't match expected format ($EXPECTED_TAG)"
-            echo "This may cause artifact download failures"
-          fi
-
-          echo "PROJECT_VERSION=$VERSION" >> $GITHUB_ENV
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: v0-precomp
+          shared-key: ${{ matrix.job.target }}-${{ matrix.nif }}
+          workspaces: |
+            native/pcap_file_ex
 
       - name: Build the project
         id: build-crate
@@ -89,76 +84,27 @@ jobs:
           project-name: pcap_file_ex
           project-version: ${{ env.PROJECT_VERSION }}
           target: ${{ matrix.job.target }}
-          nif-version: "2.15"
+          nif-version: ${{ matrix.nif }}
           use-cross: ${{ matrix.job.use-cross }}
+          cross-version: ${{ matrix.job.cross-version || 'from-source' }}
           project-dir: "native/pcap_file_ex"
+          cargo-args: ${{ matrix.job.cargo-args }}
+          variant: ${{ matrix.job.variant }}
 
       - name: Artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
           subject-path: ${{ steps.build-crate.outputs.file-path }}
 
-      - name: Upload artifacts
+      - name: Artifact upload
         uses: actions/upload-artifact@v4
         with:
-          name: nif-${{ matrix.job.target }}
+          name: ${{ steps.build-crate.outputs.file-name }}
           path: ${{ steps.build-crate.outputs.file-path }}
 
-  create_release:
-    name: Create GitHub Release
-    needs: build_release
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
+      - name: Publish archives and packages
+        uses: softprops/action-gh-release@v2
         with:
-          path: artifacts
-
-      - name: Display structure of downloaded files
-        run: ls -R artifacts
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: artifacts/**/*
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish_checksums:
-    name: Generate and upload checksums
-    needs: create_release
-    runs-on: ubuntu-22.04
-    env:
-      PCAP_FILE_EX_BUILD: true
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@1.91.0
-
-      - name: Set up Elixir
-        uses: erlef/setup-beam@v1
-        with:
-          elixir-version: '1.19.2'
-          otp-version: '28.1.1'
-          version-type: strict
-
-      - name: Install dependencies
-        run: mix deps.get
-
-      - name: Generate checksums
-        run: mix rustler_precompiled.download PcapFileEx.Native --all --print
-
-      - name: Upload checksum file
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          TAG=${GITHUB_REF#refs/tags/}
-          gh release upload $TAG checksum-*.exs --clobber
+          files: |
+            ${{ steps.build-crate.outputs.file-path }}
+        if: startsWith(github.ref, 'refs/tags/')
