feat: add safe stream API with tagged tuple error handling
  Streams now emit {:ok, packet} and {:error, metadata} tuples instead of
  raising on mid-stream errors, enabling graceful handling of corrupted files.

  Key changes in this commit:
  - Stream functions (packets/1, from_reader/1) now emit tagged tuples
  - Error metadata includes reason and packet_index for debugging
  - Bang variants (packets!/1, from_reader!/1) preserve raising behavior
  - Added comprehensive tests with corrupted PCAP fixture
  - Updated documentation with error handling patterns
  - Fixed GitHub Actions shellcheck warning

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,8 +104,10 @@ jobs:
         run: |
           MIX_VERSION=$(grep '@version' mix.exs | sed 's/.*"\(.*\)".*/\1/')
           CARGO_VERSION=$(grep '^version' native/pcap_file_ex/Cargo.toml | head -1 | sed 's/.*"\(.*\)".*/\1/')
-          echo "mix=$MIX_VERSION" >> $GITHUB_OUTPUT
-          echo "cargo=$CARGO_VERSION" >> $GITHUB_OUTPUT
+          {
+            echo "mix=${MIX_VERSION}"
+            echo "cargo=${CARGO_VERSION}"
+          } >> $GITHUB_OUTPUT
 
       - name: Check versions match
         run: |
