--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,12 @@ jobs:
       - name: Run Clippy
         run: cargo clippy --manifest-path=native/pcap_file_ex/Cargo.toml -- -Dwarnings
 
+      - name: Install Elixir deps
+        run: mix deps.get
+
+      - name: Run Credo
+        run: mix credo --strict
+
   version-sync:
     name: Verify version synchronization
     runs-on: ubuntu-latest
