--- a/native/pcap_file_ex/deny.toml
+++ b/native/pcap_file_ex/deny.toml
@@ -88,16 +88,13 @@ ignore = [
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
+# Only include licenses actually used by dependencies to avoid warnings
 allow = [
-    "MIT",
-    "Apache-2.0",
-    "Apache-2.0 WITH LLVM-exception",
-    "BSD-2-Clause",
-    "BSD-3-Clause",
-    "ISC",
-    "Unicode-DFS-2016",
-    "Unicode-3.0",
-    "Zlib",
+    "MIT",           # 24 crates
+    "Apache-2.0",    # 19 crates
+    "ISC",           # libloading
+    "Unicode-3.0",   # unicode-ident
+    "Unlicense",     # byteorder (public domain equivalent)
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
