--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,9 +101,23 @@ jobs:
           name: ${{ steps.build-crate.outputs.file-name }}
           path: ${{ steps.build-crate.outputs.file-path }}
 
+  publish_release:
+    name: Publish archives
+    needs: build_release
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: List downloaded artifacts
+        run: ls -R artifacts
+
       - name: Publish archives and packages
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            ${{ steps.build-crate.outputs.file-path }}
-        if: startsWith(github.ref, 'refs/tags/')
+          files: artifacts/**/*
