--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,8 @@ jobs:
 
       - name: Check documentation builds without warnings
         run: mix docs --warnings-as-errors
+        env:
+          MIX_ENV: dev
 
   version-sync:
     name: Verify version synchronization
